--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,23 @@
 /* 
     GENERAL
 */
+
+
+
+.bg-green{
+    background-color:#3C9687;
+    height: 20%;
+}
+
+.bg-beige{
+    background-color: #D6DBD7;
+    height: 80%;
+}
+.main-box{
+    width: 80%;
+    height: 90%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: lightcoral;
+}
