--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
-    border: 1px solid black;
-    
+    background: white;    
 }
 
 .main-box header{
-    background: green;
-    height: 50px;
+    background: #EAEAEA;
 }
 
 
@@ -74,4 +71,53 @@
 
 .search-bar{
     height: 30px;
+}
+
+.fa-circle-notch , .fa-message, .fa-ellipsis-vertical{
+    font-size: larger;
+}
+
+.user-img{
+    width: 50px;
+    height: 50px; 
+
+}
+.user-img img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+
+/* 
+    CHAT BOX
+*/
+
+.chat-box{
+    background-image: url('../img/mine.jpg');
+    flex-grow: 1;
+}
+
+.footer-chat{
+    min-height: 5px;
+}
+
+.footer-chat button{
+    width: 80px;
+    border: none;
+    height: 50px;
+}
+
+/* 
+    MESSAGE STYLE
+*/
+.sent{
+    background-color:#D5F9BA ;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.received{
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    padding: 5px;
 }
