--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,12 @@
 .chat-scroll{
     list-style-type: none;
     flex-grow: 1;
+    padding: 0;
+}
+
+.hover:hover{
+    background-color: gray;
+    opacity: 2;
 }
 
 .main-height{
@@ -77,14 +83,21 @@
 
 .user-img{
     width: 50px;
-    height: 50px; 
+    height: 50px;
 
 }
 .user-img img{
     width: 100%;
     border-radius: 50%;
 }
-
+.icon-bell{
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: white;
+    color: #8EDAFC;
+    padding: 5px;
+}
 
 /* 
     CHAT BOX
